Wed Aug 17 13:55:33 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* win32/Makefile.sub: merge from 1.7: use del instead of rm.

Thu Aug 16 19:53:19 2001  Akinori MUSHA  <knu@iDaemons.org>

	* lib/resolv.rb, lib/resolv-replace.rb: Copy from 1.7.

Thu Aug 16 16:32:21 2001  Akinori MUSHA  <knu@iDaemons.org>

	* LEGAL, ext/Setup*, ext/digest/*: Merge from 1.7: Import digest
	  modules.

	* ext/md5/*: Move to ext/digest/md5.

Thu Aug 16 03:54:36 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* lib/mkmf.rb: add -I$(srcdir) to CPPFLAGS.

Tue Aug 14 11:49:00 2001  TOYOFUKU Chikanobu  <toyofuku@juice.or.jp>

	* string.c (rb_str_cmp): remove needless conditional.

Sat Aug 11 23:08:01 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* object.c (rb_obj_inspect): merge from 1.7: remove useless space.

Sat Aug 11 14:43:47 2001  Tanaka Akira  <akr@m17n.org>

	* array.c (rb_inspecting_p): initialize inspect_key if it is
	  not initialized yet.

Tue Aug  7 09:12:55 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* win32/win32.h: fix problems with BC++ (ruby-bugs#PR161).

Mon Aug  6 17:01:33 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_mark_end_proc): should mark ruby_cref, maybe should
	  not be here, but it's simplest way for a kludge.

Mon Aug  6 00:35:03 2001  Guy Decoux  <decoux@moulon.inra.fr>

	* struct.c (rb_struct_modify): should check frozen and taint
	  status.

Sun Aug  5 07:46:18 2001  Nobuyoshi Nakada <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_undefined): do not recurse if method_missing is
	  undefined.

Wed Aug  1 20:45:14 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* win32/Makefile.sub: changed path separator of $LIB to '\'.

Tue Jul 31 12:55:35 2001  Nobuyoshi.Nakada <nobu.nokada@softhome.net>  <nobu.nakada@nifty.ne.jp>

	* file.c (rb_file_s_expand_path): expanded path should not end
	  with "/.".
	  removed meaningless code.

Tue Jul 31 11:52:10 2001  akira yamada  <akira@ruby-lang.org>

	* marshal.c (marshal_load): ruby_verbose test should be wrapped by