@@ -2,6 +2,10 @@ Wed Aug 17 13:55:33 2001  Usaku Nakamura  <usa@ruby-lang.org>
 
 	* win32/Makefile.sub: merge from 1.7: use del instead of rm.
 
+Fri Aug 17 00:49:51 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* parse.y (parse_regx): handle backslash escaping of delimiter here.
+
 Thu Aug 16 19:53:19 2001  Akinori MUSHA  <knu@iDaemons.org>
 
 	* lib/resolv.rb, lib/resolv-replace.rb: Copy from 1.7.
